# Lab-Programmazione-Marini

./: .gitignore  CMakeLists.txt  Date.cpp  Date.h  DateTime.cpp  DateTime.h  HelperFunctions.cpp  HelperFunctions.h  TodoItem.cpp  TodoItem.h  TodoList.cpp  TodoList.h  Todos.txt  compile_commands.json  main.cpp
.cache/clangd/index/: Date.h.92633DCA048EBF03.idx  DateTime.cpp.857F88CAE5D08C2F.idx  DateTime.h.492B0EEBB30B1448.idx  TodoItem.cpp.828E1CD7A9022BF1.idx  TodoItem.h.E64C8D3C2E99DA15.idx  main.cpp.C2ED69639A2F4C82.idx
cmake_build_Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake_build_Debug/.cmake/api/v1/reply/: cmakeFiles-v1-494c86695a86b9b2398c.json  codemodel-v2-777531656c5d7c3a158e.json  index-2023-09-01T14-02-11-0887.json  target-Lab_Marini-Debug-fc2fb68c992eb24cee23.json
googleTest/: .CMakeLists.txt.kate-swp  CMakeLists.txt  Tests.cpp  TodoItemTest.cpp  TodoListTest.cpp  runAllTests.cpp
